[package]
name = "ts-breeze"
description = "A multithreaded tree-sitter parsing library."
repository = "https://github.com/nvim-neorg/ts-breeze"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
neorg-dirman = "0.1.0"
rusty_pool = "0.7.0"
tree-sitter = "0.20.8"

[dev-dependencies]
tree-sitter-norg = "0.1.1"
